2009-05-10  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, configure.in: New release will be 4.1.4.
	* po/shadow.pot, man/po/shadow-man-pages.pot: Regenerated.
	* po/*.po, man/po/*.po: Updated PO files.

2009-05-10  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: Added prototype of readlink_malloc(), and
	readlink_malloc() changed to static.

2009-05-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Avoid redeclaration of root_pw.

2009-05-10  NAKANO Takeo  <nakano@webmasters.gr.jp>

	* po/ja.po: Updated Japanese translation.

2009-05-10  Jean-Luc Coulon (f5ibh)  <jean-luc.coulon@wanadoo.fr>

	* po/fr.po: Updated French translation.

2009-05-10  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Avoid PATH_MAX. On glibc, we can use realpath
	with a NULL argument.
	* src/useradd.c: Replace PATH_MAX by a fixed constant. The buffer
	was not meant as a storage for a path.
	* src/useradd.c, src/newusers.c, src/chpasswd.c: Better detection
	of fgets errors. Lines shall end with a \n, unless we reached the
	end of file.
	* libmisc/copydir.c: Avoid PATH_MAX. Support file paths with any
	length. Added readlink_malloc().

2009-05-09  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Warn if an user has an entry in passwd and shadow,
	and the password field in passwd is not 'x'.
	* src/grpck.c: Warn if a group has an entry in group and gshadow,
	and the password field in group is not 'x'.

2009-05-09  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/ENCRYPT_METHOD.xml,
	man/login.defs.d/MD5_CRYPT_ENAB.xml,
	man/login.defs.d/SHA_CRYPT_MIN_ROUNDS.xml: Updated note for PAM
	enabled versions. These variables are only used for group
	passwords in this case.

2009-05-09  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chpasswd.8.xml: Sorted options alphabetically.

2009-05-09  Nicolas François  <nicolas.francois@centraliens.net>
