@@ -211,6 +211,13 @@
       databases. If an error occurs (except in the final writes to the
       databases), no changes are committed to the databases.
     </para>
+    <para condition="pam">
+      During this first pass, users are created with a locked password
+      (and passwords are not changed for the users which are not created).
+      A second pass is used to update the passwords using PAM.  Failures
+      to update a password are reported, but will not stop the other
+      password updates.
+    </para>
 
     <para>
       This command is intended to be used in a large system environment
@@ -296,12 +303,6 @@
     <para>
       The input file must be protected since it contains unencrypted
       passwords.
-    </para>
-    <para condition="pam">
-      PAM is not used to update the passwords.
-      Only <filename>/etc/passwd</filename> and
-      <filename>/etc/shadow</filename> are updated, and the various checks
-      or options provided by PAM modules are not used.
     </para>
   </refsect1>
 
